kustomize/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-tech-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devops-tech-test
  template:
    metadata:
      labels:
        app: devops-tech-test
    spec:
      containers:
        - name: devops-tech-test
          image: ecr-repo/devops-tech-test
          ports:
            - containerPort: 8080
              name: app-port
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
      imagePullSecrets:
      - name: ecr-registry-secret
      strategy:
        type: RollingUpdate
        rollingUpdate:
          maxUnavailable: 1
          maxSurge: 1
