kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dtt-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  selector:
    app: devops-tech-test-pod
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: geocode
