kustomize/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-tech-test-service
spec:
  selector:
    app: devops-tech-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: app-port
  type: ClusterIP
